--- a/src/App.css
+++ b/src/App.css
@@ -1,28 +1,13 @@
-.App {
-  text-align: center;
-  display: flex;
-  flex-direction: column;
-}
-
-
-html,
-body {
-  width: 100%;
-  height: 100%;
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
 }
 
 #root {
-  width: 100%;
-  display: flex;
-  height: 100%;
-  justify-content: center;
-}
-
-.App {
-  width: 40%;
-  height: 65%;
-  padding: 8px;
-  border-style: ridge;
-
+  width: 30%;
+  margin: 15px;
+  padding: 40px;
+  border: 2px solid black;
 
 }
