--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,10 +1,10 @@
 .Footer {
     display: flex;
     flex-direction: row;
-    margin-left: 3.9%;
-    top: 60%;
+    margin-left: 0%;
+    top: 57%;
     position: absolute;
-    width: 33%;
+    width: 22%;
     height: 4%;
 
 }
@@ -14,6 +14,11 @@
     margin-left: auto;
     background-color: #dd3243;
     border: 0;
-    width: 24%;
+    width: 30%;
     border-radius: 5%;
+}
+
+.p-form {
+    margin: 10px;
+    margin: auto;
 }
