--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -2,7 +2,7 @@
     display: flex;
     flex-direction: row;
     margin-left: 0%;
-    top: 57%;
+    top: 85%;
     position: absolute;
     width: 22%;
     height: 4%;
@@ -14,7 +14,8 @@
     margin-left: auto;
     background-color: #dd3243;
     border: 0;
-    width: 30%;
+    width: 80px;
+    height: 40px;
     border-radius: 5%;
 }
 
